Changes in 0.4.0:
  o Added default disablesshpasswdauth plugin that disables password
    authentication for ssh logins. (RPL-386)
  o Added disabled_plugins option for disabling default plugins.
  o Added syslog logging.

Changes in 0.3.0:
  o Many bug fixes
  o Updated to the 12-15-2007 instancedata spec
  o As part of the storage plugin work, added a daemon that pre-allocates
    ephemeral storage for added IO performance
  o Added new plugins:
    * dnsupdate - updating dynamic dns server
    * hostname - setting the hostname of your ec2 instances
    * kernelmodules - attempts to download the modules that match the
        currently running kernel
    * openvpn - configure openvpn
    * rmakeserver - configure an rmake server
    * storage - used to configure elements of the ec2 ephemeral storage

Changes in 0.2.0:
  o New plugin architecture.
  o The new plugin loader takes a list of plugins from the user data,
    alieviating the need for rpathamiconfig.
  o Added plugins for the following:
    * noip - supports noip.com's dynamic dns update api
    * rapcert - provide an ssl cert to be used in the rPath Appliance
        Platform Agent.
    * raprsakey - provide an rsa key pair for use in the rPath Appliance
        Platform Agent.
    * rmakenode - configure an rMake build node via user data.

Changes in 0.1.1:
  o AMIConfig no longer tracebacks when a ssh key is not specified.

Changes in 0.1.0:
  o Initial version.