@@ -3,6 +3,7 @@ Changes in 0.4.0:
     authentication for ssh logins. (RPL-386)
   o Added disabled_plugins option for disabling default plugins.
   o Added syslog logging.
+  o Added plugin for deploying x509 certificates for sblim-sfcb
 
 Changes in 0.3.0:
   o Many bug fixes
